# house-enviromental-sensing

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: esp32.overlay
includes/: bluetooth_interface.h  sensor_interface.h  structs.h  thread_settings.h
src/: bluetooth_interface.c  main.c  sensor_interface.c
